--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* ==== Google Fonts ==== */
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Raleway:ital,wght@0,300;0,400;1,400;1,600&display=swap');
+
+/* ==== General ==== */
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: Raleway, Arial, Verdana, sans-serif;
+  line-height: 1.6;
+  overflow-x: hidden;
+  position: relative;
+  color: #444;
 }
