added Navbar color

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,7 @@
 .footer {
   margin-top: 1rem;
   padding: 1rem;
-  background: #E5E5E5;
+  background-color: rgba(20, 147, 231, 0.801);
   position: fixed;
   bottom: 0;
   left: 0;
